--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ body {
     width: 80px;
     height: auto;
     display: block;
+    max-height: 40px;
 }
 
 .topbar-clock {
